# ==========================
# pregame.gd
# ==========================
class_name pregame_menu extends Control

signal pj(selected_pj)

# ==========================
# Variables Internas
# ==========================
var nivel_precargado: PackedScene = preload("res://scenes/niveles/nivel_1.tscn")  # 游댳 Precargar la escena

# ==========================
# Inicializaci칩n
# ==========================
func _ready() -> void:
	CONTROL.connect_signals(self) # Conectar se침ales a CONTROL
	SYSLOG.debug_log("Men칰 pregame listo.", "PREGAME")

# ==========================
# Bot칩n Aceptar - Iniciar Nivel
# ==========================
func _on_aceptar_pressed() -> void:
	SYSLOG.debug_log("Iniciando nivel desde pregame.", "PREGAME")

	# 游댳 Instanciar el nivel
	var nivel_instancia = nivel_precargado.instantiate()

	# 游댳 Asegurarnos de que la escena actual est치 vac칤a antes de agregar el nivel
	for child in get_tree().current_scene.get_children():
		child.queue_free()
	await get_tree().process_frame  # 游댳 Esperamos a que se eliminen los nodos anteriores

	# 游댳 A침adir la nueva escena a la jerarqu칤a de nodos
	get_tree().current_scene.add_child(nivel_instancia)

	# 游댳 Esperamos a que `nivel_1` est칠 completamente en la jerarqu칤a antes de continuar
	await get_tree().process_frame
	await get_tree().process_frame  # 游댳 Segundo frame extra para evitar errores de referencia

	# 游댳 Forzar la inicializaci칩n manualmente despu칠s de la carga
	if nivel_instancia.has_method("initialize_level"):
		nivel_instancia.initialize_level()

	SYSLOG.debug_log("Nivel instanciado y listo.", "PREGAME")

func _on_atras_pressed() -> void:
	get_tree().change_scene_to_file("res://scenes/menus/selsave.tscn")


func _on_pj1_pressed() -> void:
	var selected_pj = 1
	emit_signal("pj", selected_pj)
	SYSLOG.debug_log("Pj1 Seleccionado, se침al emitida", "PREGAME")


func _on_pj2_pressed() -> void:
	var selected_pj = 2
	emit_signal("pj", selected_pj)
	SYSLOG.debug_log("Pj2 Seleccionado, se침al emitida", "PREGAME")


func _on_pj3_pressed() -> void:
	var selected_pj = 3
	emit_signal("pj", selected_pj)
	SYSLOG.debug_log("Pj3 Seleccionado, se침al emitida", "PREGAME")

func _on_mejoras_pressed() -> void:
	get_tree().change_scene_to_file("res://scenes/menus/mejoras.tscn")


func _on_ataques_pressed() -> void:
	get_tree().change_scene_to_file("res://scenes/menus/attacks.tscn")
